# carbon-aware-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: gen_keys.py  probe_api_limits.py  smoke.py
src/carbon_mcp/: carbon_client.py  observability.py  server.py
tests/: test_carbon.py  test_greenest.py
