[project]
name = "carbon-aware-mcp"
version = "0.1.0"
description = "MCP server exposing UK grid carbon-intensity tools for scheduling agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4,<4",
    "httpx>=0.27",
    "structlog>=24.4",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.21", "ruff>=0.6"]

[project.scripts]
carbon-mcp = "carbon_mcp.server:main"   # lets you run `uv run carbon-mcp`

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carbon_mcp"]